--- a/Primera pag de prueba.html
+++ b/Primera pag de prueba.html
@@ -3,18 +3,17 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Titulo de pagina
-            <br>
-            Servirá el salto de linea para esto?
+            Titulo pa la pestaña de pagina. El salto de linea no sirve para esto
         </title>
     </head>
 </html>
 <body>
 <p>El cuerpo de la pagina
     <br>
-    Con salto de linea
+    <strong>Con salto de linea</strong>
     <br>
     <br>
-    y con dos saltos de linea
+    y con dos saltos de linea <!--Asi comento cosas-->
 </p>
+<a href="https://www.youtube.com/watch?v=rqkBPTKWS68&t=682s&pp=ygUXbmV2ZXIgZ29ubmEgZ2l2ZSB5b3UgdXA%3D" target="_blank">rickroll?</a>
 </body>
