guarde toda la flasheada en una carpeta especifica.

--- a/Flasheada de prueba/Ej1html.html
+++ b/Flasheada de prueba/Ej1html.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicio 1 Guia teorica</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-  <h1 align="center">Soy Jorge Vega</h1>
+  <h1 align="center" class="titulo2">Soy Jorge Vega</h1>
+  <br>
+  <img src="a long time ago in a galaxy far far away.png">
   <br>
 <p align="right">Baterista, musico, algo de productor, geek <br>y ahora <strong>tratando de ser programador</strong></p>
 <br>
@@ -26,5 +29,11 @@
     <li>html</li>
     <li>y mas tarde, css</li>
 </ol>
+<br>
+<p>Enlaces:</p>
+<br>
+<a href="https://www.linkedin.com/in/jorge-a-vega-l/" target="_blank">LinkedIn Personal</a>
+<br>
+<h3 align="center"><a href="https://youtu.be/ay3Orh7D7CY" target="_blank"><img src="batsy.png" alt="olajuancarlo"></a></h3>
 </body>
 </html>
