hasta el 10 html

--- a/Ej3/index.html
+++ b/Ej3/index.html
@@ -6,6 +6,11 @@
     <title>HTML Ejercicio 3</title>
 </head>
 <body>
+    <!--Ahora crearemos otro archivo HTML en que crearemos una lista anidada de enlaces,
+deberá verse así:
+a. Cada buscador y red social que sale en la lista deben ser links a las respectivas
+páginas.
+b. Recordemos que no debemos utilizar CSS para lograr ninguna de -->
     <h1>Listita!</h1>
     <br>
     <ul>
