--- a/Ej5/Ej5.html
+++ b/Ej5/Ej5.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>HTML Ejercicio 5</title>
-    <style>
+   <!-- <style>
         table, th, td {
             border: 1px solid black;
         }
-    </style>
+    </style>-->
 </head>
 <body>
+    <!--Ahora vamos a crear una página web de nuestra banda favorita, vamos a mostrar un
+ejemplo con los Beatles:-->
     <h1>Los Beatles</h1>
     <br>
     <p>Es una banda de rock formada en el año 1960 en Liverpool</p>
@@ -25,7 +27,7 @@
         <li>George Harrison</li>
     </ul>
     <br>
-    <table>
+    <table border="1px solid black">
         <thead align="left">
         <tr>
             <th>Año</th>
