--- a/Ej4/index.html
+++ b/Ej4/index.html
@@ -6,6 +6,8 @@
     <title>HTML Ejercicio 4</title>
 </head>
 <body>
+    <!--Crear un nuevo archivo HTML en el que explicaremos la receta para hacer papas fritas. La
+página debería verse así:-->
     <h1>Papas fritas</h1>
     <br>
     <p>Receta de papas fritas caseras</p><br>
