--- a/JS/Ej6/index.html
+++ b/JS/Ej6/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Ejercicio 1</title>
+    <title>JS Ejercicio 6</title>
 </head>
 <body>
-    <script type="text/javascript" src="script.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
