hasta ej 24 menos el 19

--- a/HTML-CSS/Flasheada de prueba/Primera pag de prueba.html
+++ b/HTML-CSS/Flasheada de prueba/Primera pag de prueba.html
@@ -110,7 +110,7 @@
     <br>
     <p>Ejemplo de formulario</p>
     <br>
-    <form action="mailto: televicio.n.rock@gmail.com" method="Post" enctype="multipart/form-data">
+    <form method="Post" enctype="multipart/form-data">
         <label for="input de texto">un texto corto</label>
         <input type="text" name="input de texto" size="20" maxlength="144" value="escribite algo"> <!--El nombre del elemento del formulario es de gran importancia para poder identificarlo en nuestro
             programa de procesamiento (Java). -->
